@@ -1,5 +1,6 @@
 package org.s3s3l.yggdrasil.utils.interceptor;
 
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Proxy;
 import java.util.Arrays;
 import java.util.Collection;
@@ -22,21 +23,26 @@ public class ProxyFactory {
      * 
      * @author kehw_zwei
      * @param object
-     *            目标对象
+     *                目标对象
      * @param implCls
-     *            实现类
+     *                实现类
      * @param handler
-     *            处理器
+     *                处理器
      * @return 代理对象
      * @throws IllegalAccessException
      * @throws InstantiationException
+     * @throws SecurityException
+     * @throws NoSuchMethodException
+     * @throws InvocationTargetException
+     * @throws IllegalArgumentException
      * @since JDK 1.8
      */
     public Object getProxy(Object object,
             Class<?> implCls,
             Class<? extends InterceptorHandler> handlerType,
             Interceptor... interceptors) throws InstantiationException,
-            IllegalAccessException {
+            IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException,
+            SecurityException {
         Verify.notEmpty(interceptors);
 
         return getProxy(object, implCls, handlerType, Arrays.asList(interceptors));
@@ -48,27 +54,32 @@ public class ProxyFactory {
      * 
      * @author kehw_zwei
      * @param object
-     *            目标对象
+     *                目标对象
      * @param implCls
-     *            实现类
+     *                实现类
      * @param handler
-     *            处理器
+     *                处理器
      * @return 代理对象
      * @throws IllegalAccessException
      * @throws InstantiationException
+     * @throws SecurityException
+     * @throws NoSuchMethodException
+     * @throws InvocationTargetException
+     * @throws IllegalArgumentException
      * @since JDK 1.8
      */
     public Object getProxy(Object object,
             Class<?> implCls,
             Class<? extends InterceptorHandler> handlerType,
             Collection<Interceptor> interceptors) throws InstantiationException,
-            IllegalAccessException {
+            IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException,
+            SecurityException {
         Verify.notNull(object);
         Verify.notNull(implCls);
         Verify.notNull(handlerType);
         Verify.notNull(interceptors);
 
-        InterceptorHandler handler = handlerType.newInstance();
+        InterceptorHandler handler = handlerType.getConstructor().newInstance();
 
         handler.setTarget(object);
         handler.addInterceptor(interceptors);
